--- a/html/product_detail.html
+++ b/html/product_detail.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Bootstrap demo</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
   </head>
@@ -41,7 +41,7 @@
               <a class="nav-link" href="#">식품</a>
             </li>
           </ul>
-          <form class="d-flex">
+          <form class="d-flex" role="search">
             <input
               class="form-control me-2"
               type="search"
@@ -55,144 +55,145 @@
         </div>
       </div>
     </nav>
-    <main class="mt-3">
+
+    <main calss="mt-3">
       <div class="container">
-        <h2 class="text-center">제품 등록</h2>
-        <div class="mb-3 row">
-          <label class="col-md-3 col-form-label">제품명</label>
-          <div class="col-md-9">
-            <input type="text" class="form-control" />
-          </div>
-        </div>
-        <div class="mb-3 row">
-          <label class="col-md-3 col-form-label">제품가격</label>
-          <div class="col-md-9">
-            <div class="input-group mb-3">
-              <input type="number" class="form-control" />
-              <span class="input-group-text">원</span>
-            </div>
-          </div>
-        </div>
-        <div class="mb-3 row">
-          <label class="col-md-3 col-form-label">배송비</label>
-          <div class="col-md-9">
-            <div class="input-group mb-3">
-              <input type="number" class="form-control" />
-              <span class="input-group-text">원</span>
-            </div>
-          </div>
-        </div>
-        <div class="mb-3 row">
-          <label class="col-md-3 col-form-label">추가배송비(도서산간)</label>
-          <div class="col-md-9">
-            <div class="input-group mb-3">
-              <input type="number" class="form-control" />
-              <span class="input-group-text">원</span>
-            </div>
-          </div>
-        </div>
-        <div class="mb-3 row">
-          <label class="col-md-3 col-form-label">제품카테고리</label>
-          <div class="col-md-9">
-            <div class="row">
-              <div class="col-auto">
-                <select class="form-select">
-                  <option>전자제품</option>
-                </select>
+        <div class="row">
+          <div class="col-md-5">
+            <div
+              id="carouselExampleIndicators"
+              class="carousel carousel-dark slide"
+              data-bs-ride="true"
+            >
+              <div class="carousel-indicators">
+                <button
+                  type="button"
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide-to="0"
+                  class="active"
+                  aria-current="true"
+                  aria-label="Slide 1"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide-to="1"
+                  aria-label="Slide 2"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide-to="2"
+                  aria-label="Slide 3"
+                ></button>
               </div>
-              <div class="col-auto">
-                <select class="form-select">
-                  <option>컴퓨터</option>
-                </select>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="https://thumbnail7.coupangcdn.com/thumbnails/remote/492x492ex/image/vendor_inventory/b8d7/ce4630c9267332128fae5f6eb2319470b814172d6c7bbd4968e8d5259fde.jpg"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="https://thumbnail7.coupangcdn.com/thumbnails/remote/492x492ex/image/vendor_inventory/e09a/1c5ee31392c92e62c2d4734cb904e1731147eeabf55b8f682c45bd7a91d7.jpg"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
               </div>
-              <div class="col-auto">
-                <select class="form-select">
-                  <option>악세사리</option>
-                </select>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+          <div class="col-md-7">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">
+                  레오폴드 FC900R PD 화이트 그레이 한글 저소음 적축
+                </h5>
+                <h5 class="card-title pt-3 pb-3 border-top">156,400원</h5>
+                <p class="card-text pt-3 border-top">
+                  <span class="badge bg-dark">전자제품</span>
+                  <span class="badge bg-dark">컴퓨터</span>
+                  <span class="badge bg-dark">악세사리</span>
+                </p>
+                <p class="card-text pb-3">
+                  배송비 2,500원 | 도서산관(제주도) 배송비 추가 5,000월 |
+                  택배배송 | 5일 이내 출고
+                </p>
+                <p class="card-text pt-3 border-top">
+                    <div class="row">
+                        <div class="col-auto">
+                            <label class="col-form-label">
+                                구매수량
+                            </label>
+                        </div>
+    
+                        <div class="col-auto">
+                            <div class="input-group">
+                                <span class="input-group-text">-</span>
+                                <input type="text" class="form-control" style="width:40px;" value="1">
+                                <span class="input-group-text">+</span>
+                            </div>
+                        </div>
+                    </div>
+                </p>
+                <div class="row pt-3 pb-3 border-top">
+                    <div class="col-6">
+                        <h3>총 상품 금액</h3>
+                    </div>
+                    <div class="col-6" style="text-align: right;">
+                        <h3>156,400원</h3>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-between align-items-center ">
+                    <div class="col-6 d-grid p-1">
+                        <button type="button" class="btn btn-lg btn-dark">
+                        장바구니 담기
+                        </button>
+                        <button type="button" class="btn btn-lg btn-danger">
+                        주문하기
+                        </button>
+                    </div>
+
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="mb-3 row">
-          <label class="col-md-3 col-form-label">태그</label>
-          <div class="col-md-9">
-            <input type="text" class="form-control" />
-          </div>
-        </div>
-        <div class="mb-3 row">
-          <label class="col-md-3 col-form-label">출고일</label>
-          <div class="col-md-9">
-            <div class="input-group mb-3">
-              <input type="number" class="form-control" />
-              <span class="input-group-text">일 이내 출고</span>
+        <div class="row">
+            <div class="col-12">
+                <img src="https://image1.coupangcdn.com/image/vendor_inventory/203f/900aed53bed3a939c037a12e8f32d098a40d72c9f70018666f8044cbe573.jpg" class="img-fluid"/>
             </div>
-          </div>
-        </div>
-        <div class="mb-3 row">
-          <label class="col-md-3 col-form-label">썸네일이미지</label>
-          <div class="col-md-9">
-            <input
-              type="file"
-              class="form-control"
-              accept="image/png,image/jpeg"
-            />
-            <div class="alert alert-secondary" role="alert">
-              <ul>
-                <li>이미지 사이즈 : 350*350</li>
-                <li>파일 사이즈 : 1M 이하</li>
-                <li>파일 확장자 : png, jpg만 가능</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="mb-3 row">
-          <label class="col-md-3 col-form-label">제품이미지</label>
-          <div class="col-md-9">
-            <input
-              type="file"
-              class="form-control"
-              accept="image/png,image/jpeg"
-              multiple
-            />
-            <div class="alert alert-secondary" role="alert">
-              <ul>
-                <li>최대 5개 가능</li>
-                <li>이미지 사이즈 : 700*700</li>
-                <li>파일 사이즈 : 1M 이하</li>
-                <li>파일 확장자 : png, jpg만 가능</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="mb-3 row">
-          <label class="col-md-3 col-form-label">제품설명이미지</label>
-          <div class="col-md-9">
-            <input
-              type="file"
-              class="form-control"
-              accept="image/png,image/jpeg"
-            />
-            <div class="alert alert-secondary" role="alert">
-              <ul>
-                <li>파일 사이즈 : 5M 이하</li>
-                <li>파일 확장자 : png, jpg만 가능</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="mb-3 row">
-          <div class="col-6 d-grid p-1">
-            <button type="button" class="btn btn-lg btn-dark">취소하기</button>
-          </div>
-          <div class="col-6 d-grid p-1">
-            <button type="button" class="btn btn-lg btn-danger">
-              저장하기
-            </button>
-          </div>
         </div>
       </div>
     </main>
-    <footer class="mt-5 py-5 bg-dark">
+
+    <footer class="mt-3 py-5 bg-dark">
       <div class="row">
         <div class="col-12 col-md">
           <svg
@@ -214,7 +215,7 @@
               d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"
             />
           </svg>
-          <small class="d-block mb-3 text-muted">&copy; 2017-2020</small>
+          <small class="d-block mb-3 text-muted">&copy; 2017–2022</small>
         </div>
         <div class="col-6 col-md">
           <h5>Features</h5>
@@ -256,9 +257,10 @@
         </div>
       </div>
     </footer>
+
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
   </body>
